--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../moon.jpg") no-repeat center center/cover;
+  background: url("moon.jpg") no-repeat center center/cover;
   animation: animateBg 5s linear;
 }
 .hero span {
@@ -492,14 +492,14 @@ a {
 }
 
 .g1_img1 {
-  background-image: url("../pics/101.jpg");
+  background-image: url("101.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
 }
 
 .g1_img3 {
-  background-image: url("../pics/5.jpg");
+  background-image: url("5.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -518,28 +518,28 @@ a {
 }
 
 .g1_sec1 .sec1_img1 {
-  background-image: url("../pics/102.jpg");
+  background-image: url("102.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .g1_sec1 .sec1_img2 {
-  background-image: url("../pics/106.png");
+  background-image: url("106.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .g1_sec2 .sec1_img1 {
-  background-image: url("../pics/107.png");
+  background-image: url("107.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .g1_sec2 .sec1_img2 {
-  background-image: url("../science/2.jpg");
+  background-image: url("2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -548,7 +548,7 @@ a {
 .g2 .g2_img2 {
   width: 100%;
   height: 100%;
-  background-image: url("../pics/106.png");
+  background-image: url("106.png");
   background-repeat: no-repeat;
   background-position: calc(40%);
   background-size: cover;
@@ -750,7 +750,7 @@ a {
 }
 
 .slide_bg {
-  background: url("../6.jpg");
+  background: url("6.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: calc(70%);
@@ -1027,7 +1027,7 @@ a {
   gap: 40px;
 }
 .slide-gif .gif {
-  background-image: url("../pics/giphy.webp");
+  background-image: url("giphy.webp");
   width: 480px;
   height: 350px;
   position: relative;
