--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("moon.jpg") no-repeat center center/cover;
+  background: url("moon.png") no-repeat center center/cover;
   animation: animateBg 5s linear;
 }
 .hero span {
@@ -492,14 +492,14 @@ a {
 }
 
 .g1_img1 {
-  background-image: url("101.jpg");
+  background-image: url("101.png");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
 }
 
 .g1_img3 {
-  background-image: url("5.jpg");
+  background-image: url("5.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -518,7 +518,7 @@ a {
 }
 
 .g1_sec1 .sec1_img1 {
-  background-image: url("102.jpg");
+  background-image: url("102.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -539,7 +539,7 @@ a {
 }
 
 .g1_sec2 .sec1_img2 {
-  background-image: url("2.jpg");
+  background-image: url("2.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -749,7 +749,7 @@ a {
 }
 
 .slide_bg {
-  background: url("6.jpg");
+  background: url("6.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: calc(70%);
