--- a/styles.css
+++ b/styles.css
@@ -1425,7 +1425,7 @@ footer .container .contents .subscribe .input i {
     justify-content: center;
     align-items: center;
     top: 0;
-   0 text-align: center;
+   text-align: center;
   }
 
   .hero-headline {
