--- a/styles.css
+++ b/styles.css
@@ -1417,7 +1417,15 @@ footer .container .contents .subscribe .input i {
   clip-path: polygon(100% 100%, -100% 100%, 100% -100%, 100% 0);
   z-index: 100;
 }
-
+ .click_hold:hover .hidden2 {
+    display: block;
+    padding: 20px 0;
+    animation: fadeIn 0.5s ease-in-out;
+  }
+  .click_hold:hover .hidden1 {
+   top: -200% !important; }
+  
+ 
 }
 
 @media (max-width: 650px) {
@@ -1524,9 +1532,16 @@ transform: scale(0.7);
   .login-box1 {
     height: 80%;
   }
+  .gallary{
+    height: 250vh !important;
+  }
   .click_hold {
     top: 2% !important;
   }
+  .hidden2{
+    top: 50% !important;
+  }
+  
   .slide-gif {
     gap: 0;
   }
