--- a/styles.css
+++ b/styles.css
@@ -1523,7 +1523,7 @@ transform: scale(0.7);
     transform: scale(0.8);
   }
    .gallary{
-    height: 300vh !important;
+    height: 250vh !important;
   } 
 }
 @media (max-height: 600px) {
@@ -1558,7 +1558,10 @@ transform: scale(0.7);
   .login-box1 {
     gap: 0;
   }
-
+ .gallary{
+    height: 350vh !important;
+  }
+ 
   .slide-gif p {
     max-width: 100% !important;
     -webkit-line-clamp: 2;
