--- a/styles.css
+++ b/styles.css
@@ -1497,7 +1497,7 @@ footer .container .contents .subscribe .input i {
     gap: 5px;
   }
   .statis .container .feature-card {
-    width: 90% !important;
+    width: 265px !important;
   }
   .login-box1 {
     height: 60%;
