--- a/login_styles.css
+++ b/login_styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     font-family: 'Arial', sans-serif;
     color: #fff;
-    background: url('moon-min.jpg') no-repeat center center fixed;
+    background: url('moon-min.png') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -32,7 +32,7 @@ overflow: hidden;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.7);
     width: 350px;
     text-align: center;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out !important;
 height: 400px;
 width: 600px;
 display: flex;
