--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body {
   width: 100%;
   background: linear-gradient(20deg, #090b13, transparent);
   z-index: 1000;
+   backdrop-filter: blur(5px);
 }
 
 .navbar {
@@ -80,6 +81,9 @@ body {
 
 .nav-list li {
   margin: 0 1rem;
+  text-transform: uppercase;
+  letter-spacing:3px;
+  font-weight:bold;
 }
 
 .nav-link {
@@ -590,7 +594,9 @@ a {
   flex-direction: column;
   gap: 15%;
   text-align: center;
+ backdrop-filter: blur(5px);
 }
+
 .hover_div p {
   color: whitesmoke;
   display: -webkit-box;
