--- a/styles.css
+++ b/styles.css
@@ -81,10 +81,7 @@ body {
 
 .nav-list li {
   margin: 0 1rem;
-  text-transform: uppercase;
-  letter-spacing:3px;
-  font-weight:bold;
-}
+ }
 
 .nav-link {
   color: #fff;
@@ -97,6 +94,10 @@ body {
   background: linear-gradient(90deg, aqua, white);
   background-clip: text;
   color: transparent;
+  text-transform: uppercase;
+  letter-spacing:1px;
+  font-weight:bold;
+
 }
 .header .icons {
   display: flex;
@@ -470,7 +471,7 @@ a {
   align-items: center;
   gap: 5px;
   width: 100%;
-  height: 85vh;
+  height: 1000px;
   background-color: #090b13;
 }
 
@@ -1370,6 +1371,11 @@ footer .container .contents .subscribe .input i {
     margin-top: -5%;
   }
 }
+@media (max-width: 1200px){
+.gallary{
+  height:750px !important;
+}
+}
 @media (max-width: 992px) {
   .nav-link {
     padding: 0px !important;
@@ -1410,7 +1416,7 @@ footer .container .contents .subscribe .input i {
 
   .gallary {
     flex-direction: column;
-    height: 1000px !important;
+    height:1750px !important;
   }
   .g2 {
     max-height: 20%;
@@ -1514,10 +1520,9 @@ footer .container .contents .subscribe .input i {
     rotate: 0deg;
     border-top-right-radius:50px;
     border-bottom-left-radius:50px;
-    transition: 0.25s all ease;
   }
   .statis .container .feature-card:hover{
-    border-radius:10px;
+    border-radius:initial;
   }
   .statis .container .feature-card .feature-card-content {
     transform: rotate(0deg) !important;
