--- a/styles.css
+++ b/styles.css
@@ -456,7 +456,7 @@ a {
   color: aqua;
 }
 .feature-holder .feature-card:hover {
-  background: aqua;
+  background: #090b13;
   border-radius: 0.5rem;
 }
 .feature-card:hover .icon-frame {
@@ -471,7 +471,7 @@ a {
   align-items: center;
   gap: 5px;
   width: 100%;
-  height: 1000px;
+  height: 750px;
   background-color: #090b13;
 }
 
@@ -1371,11 +1371,7 @@ footer .container .contents .subscribe .input i {
     margin-top: -5%;
   }
 }
-@media (max-width: 1200px){
-.gallary{
-  height:750px !important;
-}
-}
+
 @media (max-width: 992px) {
   .nav-link {
     padding: 0px !important;
