--- a/styles.css
+++ b/styles.css
@@ -751,6 +751,10 @@ gap:20px;
 .myHomeSwiper {
   height: 100%;
 }
+.swiper-slide{
+  animation: slide 0.5s linear;
+}
+
 
 .slide_bg {
   background: url("typesofsoftwareengineering.jpg");
@@ -1340,6 +1344,17 @@ footer .container .contents .subscribe .input i {
     transform: rotate(315deg) translateX(-1000px);
     opacity: 0;
   }
+}
+@keyframes slide {
+  0%{
+left: 33.33%;
+opacity: 0;
+  }
+  100%{
+    opacity: 1;
+    left: 0;
+  }
+  
 }
 
 /* =====================MEDIA CONTAINER==================== */
