--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ body {
   transform: rotate(360deg);
 }
 .header .icons .facebook:hover {
-  color: #4267b2;
+  color: #1877F2;
 }
 
 .header .icons .youtube:hover {
