--- a/styles.css
+++ b/styles.css
@@ -301,6 +301,7 @@ footer {
 .hero-subheadline {
   font-size: 1.25rem;
   margin-bottom: 1rem;
+  max-width:65%;
 }
 
 .hero-cta {
@@ -361,7 +362,12 @@ footer {
 .switchers div {
   border-bottom: 2px solid aqua;
   font-weight: bold;
+  cursor: pointer;
 }
+.switchers div:hover{
+  opacity:0.75;
+}
+
 a {
   color: white;
   text-decoration: none;
@@ -1522,6 +1528,9 @@ opacity: 0;
     justify-content: center;
     align-items: center;
     text-align: center;
+  }
+  .hero-subheadline{
+    max-width: 100% !important;
   }
 
   .hero-content {
