--- a/styles.css
+++ b/styles.css
@@ -391,7 +391,7 @@ a {
 .features .container .feature-intro h2 {
   letter-spacing: 4px;
   font-weight: lighter;
-  opacity: 0.7;
+  opacity: 0.75;
 }
 
 .features .container h1 {
@@ -411,7 +411,7 @@ a {
   z-index: 1000;
   background-color: aqua;
   left: 0;
-  bottom: -5px;
+  bottom: 0;
 }
 .features p {
   color: grey;
@@ -425,7 +425,7 @@ a {
   text-overflow: ellipsis;
 }
 .features .button {
-  margin-top: 40px;
+  margin-top: 30px;
 }
 .feature-intro {
   max-width: 300px;
@@ -1557,17 +1557,20 @@ opacity: 0;
     text-align: center;
   }
   .features .container h1:after {
-    left: 33.33%;
+    left:0;
+    right:0;
+    margin:auto;
   }
 
   .feature-holder {
-    flex-direction: column;
+    justify-content: space-around;
     text-align: center;
   }
   .feature-holder .feature-card {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 235px;
   }
   .statis .container {
     flex-direction: column;
@@ -1576,10 +1579,11 @@ opacity: 0;
   }
   .statis .container .feature-card {
     width: 60% !important;
+    min-width:265px;
     rotate: 0deg;
     border-top-right-radius:50px;
     border-bottom-left-radius:50px;
-    transition: 0.4s border-radius;
+    transition: 0.8s , 0.4s border-radius;
   }
   .statis .container .feature-card:hover{
     border-radius:initial;
@@ -1603,7 +1607,7 @@ opacity: 0;
     display: block;
   }
   .gif{
-    scale:0.75;
+    scale:0.85;
   }
 }
 @media (max-width: 450px) {
@@ -1611,18 +1615,14 @@ opacity: 0;
     flex-direction: column;
     gap: 5px;
   }
-  .statis .container .feature-card {
-    width: 265px !important;
-  }
+.feature-holder .feature-card{
+  width:265px;
+}
   .login-box1 {
     height: 60%;
   }
   .click_hold {
 transform: scale(0.7);
-  }
-  .gif {
-    
-    transform: scale(0.65) !important;
   }
   .slide-gif h1 {
     max-width: 100%;
@@ -1631,7 +1631,7 @@ transform: scale(0.7);
     max-width: 100%;
   }
   .gif-intro {
-    transform: scale(0.85);
+    transform: scale(0.7);
   }
   .portfolio{
   height:555px !important;
@@ -1643,12 +1643,13 @@ transform: scale(0.7);
     height:555px !important;
   }
   .gif{
-    scale:1;
-    width:350px !important;
-    height:300px !important;
+     width:350px !important;
+    min-height:300px !important;
   }
 }
-
+.swiper-button-next, .swiper-button-prev{
+  scale:0.75;
+}
 }
 @media (max-height: 768px) and (min-width: 451px) {
 .portfolio{
