--- a/styles.css
+++ b/styles.css
@@ -1385,12 +1385,12 @@ opacity: 0;
 }
 @keyframes drop {
   0%{
-margin-bottom: 33.33%;
+transform: translateY(-50px);
 opacity: 0;
   }
   100%{
     opacity: 1;
-    margin-left: 0;
+    transform: translateY(0);
   }
   
 }
@@ -1612,6 +1612,9 @@ opacity: 0;
   .portfolio{
   height:750px !important;
 } 
+  .swiper-button-next, .swiper-button-prev{
+  scale:0;
+}
   .hero{
     height:750px !important;
   }
@@ -1645,9 +1648,7 @@ transform: scale(0.7);
     min-height:300px !important;
     height:300px !important;
   }
-  .swiper-button-next, .swiper-button-prev{
-  scale:0.75;
-}
+  
 .logo-holder{
     transform:scale(0.85);
   }
