--- a/styles.css
+++ b/styles.css
@@ -1106,13 +1106,13 @@ background: linear-gradient(180deg,#090b13,#121622);
   width: 100px;
   height: 100px;
   border-radius: 0;
-  top: -2%;
+  top: -5px;
   border-top: 10px solid aqua;
 }
 .slide-gif .gif:hover::before {
   width: 100px;
   height: 100px;
-  bottom: -2%;
+  bottom: -5px;
   border-radius: 0;
   border-bottom: 10px solid aqua;
 }
