--- a/styles.css
+++ b/styles.css
@@ -1633,7 +1633,7 @@ opacity: 0;
   height:750px !important;
 } 
   .swiper-button-next, .swiper-button-prev{
-  display:none;
+  display:none !important;
 }
   .hero{
     height:750px !important;
