--- a/styles.css
+++ b/styles.css
@@ -321,8 +321,8 @@ footer {
   transition: all 0.4s ease-in-out;
   position: relative;
   overflow: hidden;
-    text-shadow: 0 0 5px #fff , 0 0 15px #fff,0 0 25px #fff,0 0 100px #fff;
-
+/*     text-shadow: 0 0 5px #fff , 0 0 15px #fff,0 0 25px #fff,0 0 100px #fff;
+ */
 }
 
 .hero-cta::after {
@@ -412,9 +412,10 @@ a {
 .features .container h1::after {
   content: "";
   position: absolute;
-  height: 4px;
+  height: 3px;
   width: 100px;
   z-index: 1000;
+  border-radius:35px;
   background-color: aqua;
   left: 0;
   bottom: 0;
@@ -1202,7 +1203,7 @@ footer .container .links a:hover {
 footer .container .contents .icons {
   display: flex;
   gap: 30px;
-  margin-top: 20px;
+  margin: 20px;
   justify-content: center;
   -webkit-box-reflect: below 1px linear-gradient(transparent,#0005) ;
 }
@@ -1234,7 +1235,7 @@ footer .blackline span {
 }
 
 footer .blackline .bl_text {
-  padding: 20px;
+  padding: 15px;
   display: flex;
   gap: 5px;
 }
